fix(acc) code color contrast ratio

--- a/gh-pages/src/css/base.css
+++ b/gh-pages/src/css/base.css
@@ -13,7 +13,7 @@
   --color-text: #2a2a2a;
   --color-link: blue;
   --color-border: var(--color-text);
-  --color-code: fuchsia;
+  --color-code: #cf00cf;
   --radius: 4px;
 }
 
